--- a/assets/widgets-css/uewtk-button.css
+++ b/assets/widgets-css/uewtk-button.css
@@ -23,6 +23,12 @@
   transition: transform ease-in 0.1s, box-shadow ease-in 0.25s;
   box-shadow: 0 2px 25px rgba(var(--main), 0.5);
 }
+
+.button-icon {
+  font-size: 1rem;
+  color: var(--light);
+}
+
 .bubbly-button:focus {
   outline: 0;
 }
