--- a/assets/css/uewtk-editor.css
+++ b/assets/css/uewtk-editor.css
@@ -12,12 +12,11 @@
   right: 3px;
   background-color: var(--primary-color);
   border: 1px solid var(--third-color);
-  color: var(--secondary-color);
+  color: var(--third-color);
   font-size: 8px;
   padding: 1px 3px;
   line-height: 10px;
   font-family: "Open Sans", Roboto, Helvetica, Arial, sans-serif;
-  font-weight: 400;
+  font-weight: 600;
   display: inline-block;
 }
-updated 
