--- a/assets/css/uewtk-editor.css
+++ b/assets/css/uewtk-editor.css
@@ -11,8 +11,8 @@
   top: 3px;
   right: 3px;
   background-color: var(--primary-color);
-  border: 1px solid var(--third-color);
-  color: var(--third-color);
+  border: 1px solid var(--secondary-color);
+  color: var(--secondary-color);
   font-size: 8px;
   padding: 1px 3px;
   line-height: 10px;
