--- a/assets/css/uewtk-editor.css
+++ b/assets/css/uewtk-editor.css
@@ -1,8 +1,7 @@
 /** @format */
 :root {
-  --primary-color: #eb641e;
+  --primary-color: #01846c;
   --secondary-color: #ffffff;
-  --third-color: #1f2124;
 }
 
 .uewtk-label::after {
@@ -11,12 +10,12 @@
   top: 3px;
   right: 3px;
   background-color: var(--primary-color);
-  border: 1px solid var(--secondary-color);
   color: var(--secondary-color);
-  font-size: 8px;
-  padding: 1px 3px;
+  font-size: 7px;
+  padding: 2px 4px;
+  border-radius: 10px;
   line-height: 10px;
-  font-family: "Open Sans", Roboto, Helvetica, Arial, sans-serif;
+  font-family: "Kanit", "Open Sans", Roboto, Helvetica, Arial, sans-serif;
   font-weight: 600;
   display: inline-block;
 }
